--- a/index.html
+++ b/index.html
@@ -86,10 +86,6 @@
           <p class="short-info">Гарантируем минимальные сроки регистрации под ключ </p>
           <a href="#" class="more-info">Подробнее</a>
         </div>
-        <!-- <div class="vector-slider">
-          <a><img src="./img/ico/slider_left.svg" alt="стрелочка для переключения слайда" class="slider__control_left">
-          <img src="./img/ico/slider_right.svg" alt="" class="slider__control_right">
-        </div> -->
       </div>
     </section>
   </div>
@@ -102,10 +98,6 @@
           <p class="short-info">Эффективное решение сложных задач</p>
           <a href="#" class="more-info">Подробнее</a>
         </div>
-        <!-- <div class="vector-slider">
-          <a><img src="./img/ico/slider_left.svg" alt="стрелочка для переключения слайда" class="slider__control_left">
-          <img src="./img/ico/slider_right.svg" alt="" class="slider__control_right">
-        </div> -->
       </div>
     </section>
   </div>
@@ -118,10 +110,6 @@
           <p class="short-info1">Детальные разъяснения вопросов по ведению бизнеса от профессионалов</p>
           <a href="#" class="more-info">Подробнее</a>
         </div>
-        <!-- <div class="vector-slider">
-          <a><img src="./img/ico/slider_left.svg" alt="стрелочка для переключения слайда" class="slider__control_left">
-          <img src="./img/ico/slider_right.svg" alt="" class="slider__control_right">
-        </div> -->
       </div>
     </section>
 </div>
@@ -189,24 +177,123 @@
         <p class="buissnes-text">Все наши рекомендации основаны на глубоких академических знаниях и опыте практического применения в хозяйственном праве.</p>
       </div><!--COL-MD-7-->
       <div class="col-5 bg-img">
-        <!--<img src="./img/buissnes.jpg" alt="" class="buissnes-img">-->
+        
       </div>
     </div><!--/ROW-->
   </div><!--/container-->
 </section>
 
-<section class="directions bg-f2">
+<section class="directions bg-f2 pbot">
   <div class="container">
-    <h2 class="dir-title">Основные направления деятельности</h2>
+    <h2 class="direction-title">Основные направления деятельности</h2>
     <div class="row">
       <div class="col-4">
         <div class="dir-card">
-          <div class="dir-name">Взыскание долгов</div>
-          <div class="dir-img"><img src="" alt=""></div>
-          <a href="#" class="dir-link">подробнее</a>
+          <div class="card-name">
+            <h4 class="card-title">Взыскание долгов</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-1.svg" alt="иконка карточки взыскание долгов" class="img-items">
+          </div>
         </div>
-      </div>
+      </div><!--col-4-->
+      <div class="col-4">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Реорганизация бизнеса</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-2.svg" alt="иконка карточки Реорганизация бизнеса" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
+      <div class="col-4">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Продажа бизнеса</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-3.svg" alt="иконка карточки Продажа бизнеса" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
     </div><!--/ROW-->
+    
+    <div class="row mt-3">
+      <div class="col-4">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Юридические консультации</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-4.svg" alt="иконка карточки юридические консультации" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
+      <div class="col-4">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Ликвидация организаций</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-5.svg" alt="иконка карточки ликвидация организаций" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
+      <div class="col-4">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Разработка договоров</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-6.svg" alt="иконка карточки разработка договоров" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
+    </div><!--/ROW-->
+
+    <div class="row mt-3">
+      <div class="col-4">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Регистрация бизнеса</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-7.svg" alt="иконка карточки Регистрация бизнеса" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
+      <div class="col-4">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Юридический аутсорсинг</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/ico-8.svg" alt="иконка карточки Юридический аутсорсинг" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
+      <div class="col-3">
+        <div class="dir-card">
+          <div class="card-name">
+            <h4 class="card-title">Аттестация в строительстве</h4>
+            <a href="#" class="card-link">подробнее</a>
+          </div>
+          <div class="card-img">
+            <img src="./img/ico/maindirections/Dollar.svg" alt="иконка карточки Аттестация в строительстве" class="img-items">
+          </div>
+        </div>
+      </div><!--col-4-->
+    </div><!--/ROW-->
+    <a href="#" class="more-info mt-5">Подробнее</a>
   </div><!--/container-->
 </section>
 
